fix: keep offerer internally to avoid db migr
