# lib/handlers/check-order-status/handler.ts
@@ -76,7 +76,7 @@ export class CheckOrderStatusHandler extends SfnLambdaHandler<ContainerInjected,
                 quoteId: quoteId,
                 filler: fillEvent.filler,
                 nonce: fillEvent.nonce.toString(),
-                swapper: fillEvent.swapper,
+                offerer: fillEvent.swapper,
                 tokenOut: output.token,
                 amountOut: output.amount.toString(),
                 blockNumber: fillEvent.blockNumber,
@@ -177,7 +177,7 @@ export class CheckOrderStatusHandler extends SfnLambdaHandler<ContainerInjected,
                 quoteId: quoteId,
                 filler: fillEvent.filler,
                 nonce: fillEvent.nonce.toString(),
-                swapper: fillEvent.swapper,
+                offerer: fillEvent.swapper,
                 tokenOut: output.token,
                 amountOut: output.amount.toString(),
                 blockNumber: fillEvent.blockNumber,
