# lib/handlers/order-notification/handler.ts
@@ -23,7 +23,7 @@ export class OrderNotificationHandler extends DynamoStreamLambdaHandler<Containe
         const newOrder = eventRecordToOrder(record)
 
         const registeredEndpoints = await webhookProvider.getEndpoints({
-          swapper: newOrder.swapper,
+          offerer: newOrder.swapper,
           orderStatus: newOrder.orderStatus,
           filler: newOrder.filler,
         })
@@ -35,7 +35,7 @@ export class OrderNotificationHandler extends DynamoStreamLambdaHandler<Containe
               orderHash: newOrder.orderHash,
               createdAt: newOrder.createdAt,
               signature: newOrder.signature,
-              swapper: newOrder.swapper,
+              offerer: newOrder.swapper,
               orderStatus: newOrder.orderStatus,
               encodedOrder: newOrder.encodedOrder,
               chainId: newOrder.chainId,
