# lib/handlers/order-notification/schema/index.ts
@@ -9,7 +9,7 @@ export const OrderNotificationInputJoi = Joi.object({
         dynamodb: Joi.object({
           NewImage: Joi.object({
             filler: Joi.object({ S: FieldValidator.isValidEthAddress() }),
-            swapper: Joi.object({ S: FieldValidator.isValidEthAddress().required() }).required(),
+            offerer: Joi.object({ S: FieldValidator.isValidEthAddress().required() }).required(),
             orderHash: Joi.object({ S: FieldValidator.isValidOrderHash().required() }).required(),
             encodedOrder: Joi.object({ S: FieldValidator.isValidEncodedOrder().required() }).required(),
             orderStatus: Joi.object({ S: FieldValidator.isValidOrderStatus().required() }).required(),
